Wed Feb 14 06:12:29 GMT 2007  Olly Betts <olly@survex.com>

	* tests/harness: svn:ignore: remove .dirstamp and depcomp.

Wed Feb 14 06:10:44 GMT 2007  Olly Betts <olly@survex.com>

	* languages/Makefile.mk: In maintainer-mode, remove snowball and
	  generated allsnowballheaders.h on "make clean".  When not in
	  maintainer-mode, remove them on "make maintainer-clean".
	* languages/: svn:ignore all vim swap files.

Wed Feb 14 05:54:32 GMT 2007  Olly Betts <olly@survex.com>

	* languages/Makefile.mk: Distribute the stub languages/Makefile.
	* tests/harness/Makefile.mk: No need to explicitly distribute
	  harness/Makefile.mk.

Wed Feb 14 05:52:08 GMT 2007  Olly Betts <olly@survex.com>

	* languages/Makefile.mk: Distribute languages/dir_contents.

Wed Feb 14 05:44:10 GMT 2007  Olly Betts <olly@survex.com>

	* api/Makefile.am,api/vectortermlist.h,common/Makefile.am,
	  queryparser/Makefile.am: We use vectortermlist.h from the
	  queryparser directory, so move it from api to common.

Wed Feb 14 05:27:13 GMT 2007  Olly Betts <olly@survex.com>

	* languages/Makefile.mk,languages/stem.cc: Disable finnish and lovins
	  temporarily, until I sort out merging the support for among with
	  functions properly.

Wed Feb 14 05:24:36 GMT 2007  Olly Betts <olly@survex.com>

	* languages/steminternal.cc,languages/steminternal.h: Temporarily
	  back out the changes to handling of among with functions.

Tue Feb 13 19:11:57 GMT 2007  Olly Betts <olly@survex.com>

	* tests/harness/testsuite.cc: If a test throws an unknwon exception,
	  say so in the test failure message.  If it throws std::string,
	  report the first 40 character (or first line) of the string.

Tue Feb 13 17:48:11 GMT 2007  Olly Betts <olly@survex.com>

	* languages/steminternal.cc: Fix decoding of 3 byte utf-8 sequences.

Tue Feb 13 17:47:22 GMT 2007  Olly Betts <olly@survex.com>

	* languages/Makefile.mk: Fix dependency of generated
	  languages/allsnowballheaders.h to be on languages/Makefile.mk.
