@@ -921,7 +921,6 @@ AC_CONFIG_FILES([
  bin/Makefile
  examples/Makefile
  getopt/Makefile
- queryparser/Makefile
  docs/doxygen_api_conf
  docs/doxygen_full_conf
  xapian.spec
@@ -970,7 +969,11 @@ then
 else
   mv include/xapian/version.h.tmp include/xapian/version.h
 fi
-dnl There are no generated files in languages, and the first thing that we will
-dnl try to build there in an SVN checkout is languages/snowball using a custom
-dnl rule, so make sure that the directory exists for when srcdir != builddir.
-test -d languages || mkdir languages
+
+dnl There are no files generated by configure in "languages" or "queryparser",
+dnl and the first thing that "make" will try to build there in an SVN checkout
+dnl is "languages/snowball" or "queryparser/lemon" using a custom rule, so make
+dnl sure that these directories exists for when srcdir != builddir.
+for dir in languages queryparser ; do
+  test -d "$dir" || mkdir "$dir"
+done
