@@ -1,0 +1,9 @@
+# Makefile for use in directories built by non-recursive make.
+
+SHELL = /bin/sh
+
+all check:
+	cd .. && $(MAKE) $(MAKEFLAGS) $@
+
+clean:
+	rm -f *.o *.obj *.lo
