@@ -1,3 +1,12 @@
+Wed Feb 14 06:14:42 GMT 2007  Olly Betts <olly@survex.com>
+
+	* Makefile.am,configure.ac,queryparser/Makefile,
+	  queryparser/Makefile.am,queryparser/Makefile.mk:
+	  Convert queryparser subdirectory to non-recursive make.
+	* Makefile.am: Enable automake option "subdir-objects" so
+	  that built objects for a non-recursively made directory
+	  go into that directory.
+
 Wed Feb 14 06:12:29 GMT 2007  Olly Betts <olly@survex.com>
 
 	* tests/harness: svn:ignore: remove .dirstamp and depcomp.
